--- a/documentation/pages/creation_projet.html
+++ b/documentation/pages/creation_projet.html
@@ -87,8 +87,8 @@
                 </li>
                 <li>
                     De la même manière, créez une scène pour les météorites avec comme nom Meteorite et avec la Node
-                    Rigidbody2D. Une scène pour le menu avec comme nom Menu et avec la Node Control. Finallement,
-                    créez une scène pour les projectiles avec comme nom Projectile et avec la Node Area2D.
+                    Rigidbody2D. Finallement, créez une scène pour les projectiles avec comme nom Projectile et avec la
+                    Node Area2D.
                 </li>
                 <li>
                     Avant de passer à l'étape suivante, en haut diriger vous dans l'onglet AssetLib et chercher le
