--- a/documentation/pages/creation_projet.html
+++ b/documentation/pages/creation_projet.html
@@ -39,25 +39,48 @@
                 servent :
             </p>
             <ul>
-                <li>
-                    <strong>Scènes</strong>: Les scènes sont les éléments principaux du jeu. Dans Space Invaders,
-                    on a besoin de scènes pour le vaisseau spatial, les météorites, les projectiles,
-                    etc.
-                </li>
-                <li>
-                    <strong>Scripts</strong>: Les scripts sont utilisés pour ajouter des fonctionnalités et des
-                    comportements aux objets du jeu. On aura besoin de scripts pour gérer les mouvements du
-                    vaisseau spatial, la création des météorites, la détection des collisions, etc.
-                </li>
-                <li>
-                    <strong>Taille de la fenêtre</strong>: Il est important de paramétrer la taille de la fenêtre du
-                    jeu pour qu'elle convienne aux différents sprites. On définira une taille qui
-                    correspond à la résolution attendue du jeu.
-                </li>
-                <li>
-                    <strong>Contrôles</strong>: On aura besoin de définir les contrôles pour les mouvements du vaisseau
-                    spatial. Par exemple on pourra utiliser les flèches pour se déplacer ou bien ZQSD.
-                </li>
+                <div class="container">
+                    <div class="image">
+                        <img src="../images/scenes.png" alt="Scènes">
+                    </div>
+                    <div class="text">
+                        <strong>Scènes</strong>: Les scènes sont les éléments principaux du jeu. Dans Space Invaders,
+                        on a besoin de scènes pour le vaisseau spatial, les météorites, les projectiles,
+                        etc.
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="image">
+                        <img src="../images/script.png" alt="Scripts" style="width: 1000px;">
+                    </div>
+                    <div class="text">
+                        <strong>Scripts</strong>: Les scripts sont utilisés pour ajouter des fonctionnalités et des
+                        comportements aux objets du jeu. On aura besoin de scripts pour gérer les mouvements du
+                        vaisseau spatial, la création des météorites, la détection des collisions, etc.
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="image">
+                        <img src="../images/display.png" alt="Display">
+                    </div>
+                    <div class="text">
+                        <strong>Taille de la fenêtre</strong>: Il est important de paramétrer la taille de la fenêtre du
+                        jeu pour qu'elle convienne aux différents sprites. On définira une taille qui
+                        correspond à la résolution attendue du jeu.
+                    </div>
+                </div>
+
+                <div class="container">
+                    <div class="image">
+                        <img src="../images/control.png" alt="Control">
+                    </div>
+                    <div class="text">
+                        <strong>Contrôles</strong>: On aura besoin de définir les contrôles pour les mouvements du
+                        vaisseau spatial. Par exemple on pourra utiliser les flèches pour se déplacer ou bien ZQSD.
+                    </div>
+                </div>
             </ul>
         </section>
 
@@ -104,6 +127,31 @@
                     scènes.
                 </li>
             </ol>
+            <div class="img-with-text">
+                <img src="../images/new_project.png" alt="new_project" style="width: 400px;">   
+                <p>Étape 1</p>
+            </div>
+            <div class="img-with-text">
+                <img src="../images/node2d.png" alt="Node2D">
+                <p>Étape 2</p>
+            </div>
+            <div class="img-with-text">
+                <img src="../images/kinetic.png" alt="KinematicBody2D">
+                <p>Étape 3</p>
+            </div>
+            <div class="img-with-text">
+                <img src="../images/meteorite.png" alt="Meteorite">
+                <p>Étape 4</p>
+            </div>
+            <div class="img-with-text">
+                <img src="../images/python-script.png" alt="Python Script" style="width: 700px;">
+                <p>Étape 5</p>
+            </div>
+            <div class="img-with-text">
+                <img src="../images/new-script.png" alt="New Script" style="width: 300px;">
+                <p>Étape 6</p>
+            </div>
+
         </section>
 
         <section>
