--- a/documentation/pages/installation.html
+++ b/documentation/pages/installation.html
@@ -35,12 +35,12 @@
 
         <section>
             <p>
-                La manière la plus simple d'installer Godot est d'utiliser l'AssetLib de Godot.
-                Une fois Godot installé, ouvrez-le et cliquez sur l'onglet AssetLib. Recherchez
+                La manière la plus simple d'installer python pour Godot est d'utiliser l'AssetLib de Godot.
+                Une fois Godot3 installé, ouvrez-le et cliquez sur l'onglet AssetLib. Recherchez
                 "PythonScript" et cliquez sur le bouton "Installer" pour installer le plugin.
                 Cependant cette méthode ne fonctionne pas toujours, c'est pourquoi vous
-                pouvez suivre les étapes suivantes pour installer Godot qui consiste
-                à compiler Godot à partir des sources.
+                pouvez suivre les étapes suivantes pour installer Godot3 qui consiste
+                à le compiler à partir des sources.
             </p>
         </section>
 
